15072
#3121 is closely related

given this script containing an error:
```scala
  ~> cat S.scala
#!/bin/sh
exec scala $$0 $$@
!#

println(1)
println(2)
println(3)
prizzle(4)
println(5)
```

the 2.7 script runner locates the error properly:
```scala
  ~> /usr/local/scala-2.7.7.final/bin/scala S.scala           
(fragment of S.scala):5: error: not found: value prizzle
prizzle(4)
 ^
one error found
!!!
discarding <script preamble>
```

but the 2.8 script runner reports the error as occurring in a different line:
```scala
  ~> /usr/local/scala-2.8.0.Beta1-prerelease/bin/scala S.scala
(fragment of S.scala):2: error: not found: value prizzle
println(1)
    ^
one error found
!!!
discarding <script preamble>
```
